# scale-hackathon-webcam

./: index.html  make.sh
fn1/: go.mod  go.sum  main.go  scalefile
fn2/: Cargo.toml  scalefile
signature/: scale.signature
test_runtime/: go.mod  go.sum  local-webcam-latest.scale  main.go
web/: docker-compose.yaml  package.json  tsconfig.json
web/src/: index.html
web/src/js/: index.ts
web/src/style/: style.css
